v1/README.md
<img src="https://lm-assets.s3.amazonaws.com/screenshots/leap_unity_logo.png">
=====

<img src="https://developer.leapmotion.com/documentation/images/Leap_Finger_Model.png">

##V1: Consumer Release
The following repository contains Leap Motion SDK examples built with Unity. Each project is built using V1 Core Services Tracking code from [Leap Motion's Developer Portal](https://developer.leapmotion.com/downloads). For additional support with these examples and more, feel free to reach out to us via: [Leap Motion's Community Forums](https://community.leapmotion.com/)  

**NOTE**: The V1 Core Services tracking code is currently released to production for all consumers. 

##Resources
* Each Unity project example folder has a short README
* [Leap Motion Getting Started (Unity)](https://developer.leapmotion.com/documentation)
* [Leap Motion API Docs (C#)](https://developer.leapmotion.com/documentation/csharp/index.html)
* [Unity Tutorial Videos](https://unity3d.com/learn/tutorials/modules)

##Contributing
* Make a fork, name your branch, add your addition or fix.
* Add your name, email, and github account to the CONTRIBUTORS.txt list, thereby agreeing to the terms and conditions of the Contributor License Agreement.
* Open a Pull Request. If your information is not in the CONTRIBUTORS file, your pull request will not be reviewed.
